# datapace-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  Makefile  README.md  docker-compose.yml  release-plz.toml
.github/workflows/: ci.yml  pr-title.yml  release-plz.yml  release.yml
config/: agent.example.toml
configs/: agent.example.yaml
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  EXTENDING.md  QUICKSTART.md  SECURITY.md
scripts/: init-dev-db.sql
src/: config.rs  lib.rs  main.rs
src/anonymizer/: fingerprint.rs  idempotency.rs  mod.rs  sanitize.rs
src/collector/: activity.rs  capability.rs  explain.rs  io.rs  locks.rs  mod.rs  pool.rs  registry.rs  schema.rs  statements.rs  tables.rs
src/collector/mongodb/: bson_type.rs  collections.rs  current_ops.rs  mod.rs  providers.rs  repl_status.rs  schema.rs  server_status.rs  slow_queries.rs  stats.rs  top.rs
src/collector/mysql/: mod.rs  providers.rs  queries.rs
src/collector/postgres/: mod.rs  providers.rs  queries.rs
src/config/: mod.rs
src/health/: mod.rs
src/payload/: mod.rs
src/scheduler/: manager.rs  mod.rs
src/shipper/: datapace.rs  generic.rs  mod.rs  prometheus.rs
src/store/: mod.rs  sqlite.rs
src/ui/: api.rs  mod.rs
src/ui/assets/: app.js  index.html  style.css
src/uploader/: mod.rs
tests/: integration.rs
tests/integration/: e2e_test.rs  mod.rs  mongodb_container_test.rs  postgres_container_test.rs  postgres_test.rs  uploader_test.rs
