[package]
name = "datapace-agent"
version = "0.1.0"
edition = "2021"
authors = ["Datapace <hello@datapace.ai>"]
description = "A lightweight agent that collects database metrics and sends them to Datapace Cloud"
license = "Apache-2.0"
repository = "https://github.com/datapace-ai/datapace-agent"
readme = "README.md"
keywords = ["database", "monitoring", "postgres", "metrics", "observability"]
categories = ["command-line-utilities", "database"]

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# PostgreSQL
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"], default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
regex = "1.11"
async-trait = "0.1"

# Graceful shutdown
tokio-util = "0.7"

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
wiremock = "0.6"
testcontainers = "0.23"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
