[package]
name = "datapace-agent"
version = "2.0.0"
edition = "2021"
authors = ["Datapace <hello@datapace.ai>"]
description = "Open-source PostgreSQL monitoring agent with local time-series storage, web UI, and optional cloud shipping"
license = "Apache-2.0"
repository = "https://github.com/datapace-ai/datapace-agent"
readme = "README.md"
keywords = ["database", "monitoring", "postgres", "metrics", "observability"]
categories = ["command-line-utilities", "database"]

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration (TOML)
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database: PostgreSQL + SQLite via sqlx
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "sqlite",
    "chrono",
] }

# Database: MongoDB
mongodb = { version = "2", default-features = false, features = ["tokio-runtime", "bson-chrono-0_4"] }
bson = { version = "2", features = ["chrono-0_4"] }

# HTTP client (for shippers)
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"], default-features = false }

# Web server (UI + Prometheus exporter)
axum = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
sha2 = "0.10"
hex = "0.4"
regex = "1.11"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
